Initial commit for brzdoors-goth

--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -1,6 +1,6 @@
 package home
 
-import "gothstarter/views/layouts"
+import "github.com/kakarotDevs/brzdoors-goth/views/layouts"
 
 templ Index() {
 	@layouts.Base() {
