--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -1,20 +1,10 @@
 package home
 
-import "github.com/kakarotDevs/brzdoors-goth/views/layouts"
+import "github.com/kakarotDevs/brzdoors-goth/layouts"
 
 templ Index() {
-	@layouts.Base() {
-		<div class="flex flex-col md:flex-row">
-			<div class="flex w-full flex-col justify-start gap-8 p-6 md:w-72 md:justify-start md:p-8">
-				<nav class="flex flex-row gap-4 sm:gap-8 md:mt-8 md:flex-col">
-					<ul class="flex flex-row gap-4 sm:gap-8 md:flex-col">
-						<li class="text-4xl font-light whitespace-nowrap sm:text-5xl"><a href="/">Briz Doors</a></li>
-						<li class="text-2xl font-light whitespace-nowrap sm:text-3xl"><a href="/about">About</a></li>
-						<li class="text-2xl font-light whitespace-nowrap sm:text-3xl"><a href="/contact">Contact</a></li>
-						<li class="text-2xl font-light whitespace-nowrap sm:text-3xl"><a href="/order">Order</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
+	@layouts.Base("Home") {
+		<h1 class="text-3xl font-bold">Welcome to Briz Doors</h1>
+		<p class="mt-2 text-gray-700">Opening new doors to simple, efficient design.</p>
 	}
 }
