--- a/layouts/base.templ
+++ b/layouts/base.templ
@@ -8,9 +8,10 @@ templ Base(title string, children ...templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>{ title }</title>
 			<link rel="stylesheet" href="/public/styles.css"/>
-			<script src="https://unpkg.com/htmx.org@2.0.4" crossorigin="anonymous"></script>
+			<script src="/public/js/htmx.min.js"></script>
 		</head>
-		<body class="antialiased font-thin bg-white min-h-screen">
+		<body class="bg-white min-h-screen font-thin">
+			// antialiased for font smoothing
 			<div class="flex flex-row max-w-7xl mx-auto min-h-screen">
 				<!-- Sidebar / Nav -->
 				<nav class="flex w-full flex-col justify-start gap-8 p-6 md:w-72 md:justify-start md:p-8">
